# simd32

./: .gitignore  Cargo.toml  plik  testcase
.cargo/: config
benches/: bench.rs
src/: lib.rs  main.rs
