[package]
name = "base32"
version = "0.1.0"
authors = ["Nikodem Rabuliński <nikodemrabulinski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_simd = "^0.3.3"
rayon = "^1.3.0"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "bench"
harness = false